Fixed MS Edge not showing import progress bar: Doesn't support `classList.replace()`

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ h1 {
     text-align: center;
     vertical-align: middle;
     white-space: normal;
-    width: 100px;
+    width: 115px;
   }
     .alarms-panel-right {
       margin: 0 5px;
